# projekt-w-jezyku-c-wdurczak

./: CMakeLists.txt  README.md  board.c  board.h  game.c  game.h  gui.h  main.c  spec.txt
api/: game.py  main.py
api/models/requests/: MoveRequest.py
api/models/responses/: MoveResponse.py
app/: CMakeLists.txt
app/src/: api_client.c  api_client.h  game.c  game.h  main.c  render.c  render.h
