cmake_minimum_required(VERSION 3.15)
project(tictactoe C)

set(CMAKE_C_STANDARD 11)

find_package(PkgConfig REQUIRED)
pkg_check_modules(GTK3 REQUIRED gtk+-3.0)

include_directories(${GTK3_INCLUDE_DIRS})
link_directories(${GTK3_LIBRARY_DIRS})

add_executable(tictactoe
        main.c
        board.c
        game.c
)

target_link_libraries(tictactoe ${GTK3_LIBRARIES})